# PX4-Avoidance

./: .gitignore  .gitmodules  .mailmap  .organizationmap  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  avoidance.sublime-project  check_code_format.sh  dependencies.rosinstall  package.xml
avoidance/: CMakeLists.txt  package.xml
avoidance/include/avoidance/: CompanionStatus.h  avoidance_node.h  common.h  fov.h  histogram.h  kdtree.h  rviz_world_loader.h  transform_buffer.h  usm.h
avoidance/launch/: avoidance_sitl.launch.py  avoidance_sitl_mavros.launch  avoidance_sitl_stereo.launch
avoidance/resource/: px4_config.yaml
avoidance/sim/worlds/: boxes1.world  boxes1.yaml  boxes3.world  boxes3.yaml  boxes4.world  boxes5.yaml  boxes6.yaml  simple_obstacle.world  simple_obstacle.yaml  test_city_4.world  window.world  window.yaml
avoidance/src/: CompanionStatus.cpp  avoidance_node.cpp  avoidance_node_main.cpp  common.cpp  fov.cpp  histogram.cpp  rviz_world_loader.cpp  transform_buffer.cpp
avoidance/test/: main.cpp  test_common.cpp  test_fov.cpp  test_histogram.cpp  test_transform_buffer.cpp  test_usm.cpp  test_usm.cpp.dot
global_planner/: CMakeLists.txt  package.xml
global_planner/cfg/: GlobalPlannerNode.cfg  RRTPlannerNode.yaml  global_planner_node.cfg  path_handler_node.cfg
global_planner/include/avoidance/: cell.h  common_ros.h  global_planner.h
global_planner/include/global_planner/: analysis.h  avoidance_output.h  bezier.h  cell.h  common.h  common_ros.h  global_planner.h  global_planner_node.h  node.h  octomap_ompl_rrt.h  octomap_rrt_planner.h  ompl_octomap.h  ompl_setup.h  search_tools.h  visitor.h  waypoint_generator.h
global_planner/launch/: avoidance.launch  global_planner.launch  global_planner_bezier.launch  global_planner_depth-camera.launch  global_planner_depth_camera.launch.py  global_planner_depth_camera_real.launch.py  global_planner_depth_camera_rs2_light_node.launch.py  global_planner_octomap.launch  global_planner_offboard.launch  global_planner_sitl_3cam.launch  global_planner_sitl_mavros.launch  global_planner_stereo.launch  local_planner_depth-camera.launch  mavros_sitl.launch  no_planner.launch  ompl_rrt_planner_octomap.launch  ompl_rrt_planner_stereo.launch  sitebots_global_planner_sitl_mavros.launch  sitebots_mavros_sitl.launch
global_planner/msg/: PathWithRiskMsg.msg
global_planner/resource/: global_planner.rviz  parameter_file  px4_config.yaml
global_planner/resource/odroid/: README.md
global_planner/src/nodes/: global_planner_node.cpp  global_planner_node.h  global_planner_node_main.cpp  local_planner.cpp  mock_data_node.cpp  mock_data_node.h  octomap_rrt_planner_node.cpp  path_handler_node.cpp  path_handler_node.h  waypoint_generator.cpp  waypoint_generator.cpp.dot
global_planner/test/: test_waypoint_generator.cpp
global_planner/worlds/: outdoor_village.world
local_planner/: CMakeLists.txt  nodelets.xml  package.xml
local_planner/cfg/: local_planner_node.cfg  params.yaml  vehicle.yaml
local_planner/include/avoidance/: common_ros.h
local_planner/include/local_planner/: avoidance_output.h  box.h  candidate_direction.h  common.h  cost_parameters.h  histogram.h  local_planner.h  local_planner_node.h  local_planner_nodelet.h  local_planner_visualization.h  planner_functions.h  rviz_world_loader.h  star_planner.h  stopwatch.h  trajectory_simulator.h  tree_node.h  waypoint_generator.h
local_planner/launch/: A700_3cam_only.launch  auvsi_demo.launch  example.launch  local_planner.launch  local_planner_A700.launch  local_planner_A700_1cam.launch  local_planner_A700_3cam.launch  local_planner_aero.launch  local_planner_aeroD415.launch  local_planner_bench_1cam.launch  local_planner_bench_2cam.launch  local_planner_depth-camera.launch  local_planner_realsense.launch  local_planner_sitl_3cam.launch  local_planner_sitl_mavros.launch  local_planner_snappy.launch  local_planner_stereo.launch  log_replay.launch  mavros.launch  mavros_sitl.launch  rs_depthcloud.launch
local_planner/msg/: ProcessTime.msg  Profiling.msg
local_planner/resource/: custom_rosconsole.conf  local_planner.rviz  px4_config.yaml  realsense_params.sh  rqt_param_toggle.sh  sc_params.sh  stereo_calib.json
local_planner/src/nodes/: avoidance_output.h  box.cpp  box.h  candidate_direction.h  common.cpp  common.h  cost_parameters.h  ground_detector.cpp  ground_detector.h  histogram.cpp  histogram.h  load_RVIZ_world.cpp  load_RVIZ_world.h  local_planner.cpp  local_planner.h  local_planner_node.cpp  local_planner_node.h  local_planner_node_main.cpp  local_planner_nodelet.cpp  local_planner_visualization.cpp  planner_functions.cpp  planner_functions.h  rviz_world_loader.cpp  rviz_world_loader.h  star_planner.cpp  star_planner.h  stopwatch.cpp  tree_node.cpp  tree_node.h  waypoint_generator.cpp  waypoint_generator.cpp.dot  waypoint_generator.h
local_planner/src/utils/: trajectory_simulator.cpp
local_planner/test/: local_planner_mission.test  main.cpp  test_common.cpp  test_histogram.cpp  test_local_planner.cpp  test_local_planner_node.cpp  test_local_planner_nodelet.cpp  test_planner_functions.cpp  test_star_planner.cpp  test_trajectory_simulator.cpp  test_waypoint_generator.cpp  valgrind_suppressions.sup
safe_landing_planner/: CMakeLists.txt
safe_landing_planner/cfg/: WaypointGeneratorNode.cfg  safe_landing_planner_node.cfg  slpn_structure_core.yaml  waypoint_generator_node.cfg  wpgn.yaml  wpgn_structure_core.yaml
safe_landing_planner/include/safe_landing_planner/: grid.hpp  safe_landing_planner.hpp  safe_landing_planner_node.hpp  safe_landing_planner_visualization.hpp  waypoint_generator.hpp  waypoint_generator_node.hpp
safe_landing_planner/launch/: safe_landing_planner.launch  safe_landing_planner_vtol.launch
safe_landing_planner/msg/: SLPGridMsg.msg
safe_landing_planner/resource/: safe_landing_planner.rviz
safe_landing_planner/test/: test_safe_landing_planner.cpp  test_waypoint_generator.cpp
safe_landing_planner/tools/: generate_launchfile.sh
src/avoidance/: package.xml
src/avoidance/launch/: parameters.yaml  (+1 more)
(+317 files in other folders)
