<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_planner</name>
  <version>1.0.0</version>
  <description>PX4 Avoidance global planner ROS2 version</description>
  <maintainer email="ldg810@gmail.com">Dongoo Lee</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>ros_environment</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>avoidance</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>avoidance_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
